# orderbookfetcher

./: .env.example  .gitignore  Dockerfile  README.md  data loader playground.ipynb  determine-bins.ipynb  docker-compose.yaml  experymenta.ipynb  fetch_orderbook.py  generate_dataset.py  pyproject.toml  requirements.txt  script.py  verify chunk.ipynb
src/: data.py  model.py
