[tool.poetry]
name = "btc"
version = "0.1.0"
description = ""
authors = ["int8 <kamil@czarnogorski.pl>"]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
msgpack = "^0.6.1"
requests = "^2.22.0"
boto3 = "^1.20.26"
pandas = "^1.3.5"
numpy = "^1.21.5"
tqdm = "^4.62.3"
python-dateutil = "^2.8.2"
cachetools = "^4.2.4"
scipy = "^1.7.3"
torch = "^1.10.1"
torchvision = "^0.11.2"
ujson = "^5.1.0"



[tool.poetry.dev-dependencies]
notebook = "^6.4.6"
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
